tests/snapshots/integration__integration_tests__approvals__add_approvals_all_none_approved.snap
---
source: tests/integration_tests/approvals.rs
info:
  program: wt
  args:
    - config
    - approvals
    - add
    - "--all"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
🟡 [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m

⚪ post-create:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test'[0m[2m[0m
❌ [31mCannot prompt for approval in non-interactive environment[39m

💡 [2mIn CI/CD, use [90m--force[39m to skip prompts. To pre-approve commands, use [90mwt config approvals add[39m[22m
