tests/snapshots/integration__integration_tests__approvals__ask_approvals_no_config.snap
---
source: tests/integration_tests/approvals.rs
info:
  program: wt
  args:
    - beta
    - ask-approvals
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_COUNT: "1"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_KEY_0: advice.mergeConflict
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_CONFIG_VALUE_0: "false"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----
❌ [31mNo project configuration found[0m

----- stderr -----
❌ [31mNo project configuration found[0m
💡 [2mCreate a config file at: [1m[2m[REPO]/.config/wt.toml[0m[0m
